--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@ $flash = $_GET['msg'] ?? "";
         <span><?php echo htmlspecialchars($school_name) ?></span>
       </a>
 
-      <nav id="menu" class="menu">
+<!--       <nav id="menu" class="menu">
         <a href="admin_login.php">Admin</a>
         <a href="teacher_register.php">Teacher</a>
         <a href="about.php">About</a>
        
-      </nav>
+      </nav> -->
 
       <button id="burger" class="burger" aria-label="Menu"><i class="ri-menu-3-line"></i></button>
     </div>
@@ -195,7 +195,7 @@ $flash = $_GET['msg'] ?? "";
 
         <div class="hero__cta">
           <a href="random-picker.html" class="btn btn--primary btn--pill"><i class="ri-flashlight-line"></i> Generate Now</a>
-          <a href="add_question.php" class="btn btn--ghost btn--pill"><i class="ri-folder-upload-line"></i>Samarth Family</a>
+          <a href="about.html" class="btn btn--ghost btn--pill"><i class="ri-folder-upload-line"></i>About</a>
         </div>
 
         <ul class="badge-list">
@@ -336,3 +336,4 @@ $flash = $_GET['msg'] ?? "";
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
