--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ $flash = $_GET['msg'] ?? "";
     <div class="container nav-wrap">
       <a class="brand" href="#">
         <span class="brand__logo"><img src="spsk1.png"></span>
-        <span><?php echo htmlspecialchars($school_name) ?></span>
+        <span>Samarth Public School</span>
       </a>
 
 <!--       <nav id="menu" class="menu">
@@ -336,4 +336,5 @@ $flash = $_GET['msg'] ?? "";
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
