--- a/question-paper.html
+++ b/question-paper.html
@@ -9,23 +9,58 @@
 <script src="https://cdn.jsdelivr.net/npm/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
 
 <style>
+  /* Ensure content breaks properly */
+.q-item, .sec-title, .sheet-inner {
+  page-break-inside: avoid;
+}
+
+.page-break {
+  page-break-before: always;
+}
+.paper-h1 {
+  margin-top: 0;   /* 👈 bilkul top se chipakne ke liye */
+  padding-top: 0;
+}
+
+
   .sheet {
-    width: 210mm; min-height: 297mm;
-    background: #fff; color:#111; 
+    width: 210mm; 
+    height: 297mm;
+    background: #fff; 
+    color:#111; 
     box-shadow: 0 10px 30px rgba(0,0,0,.35);
+    margin: auto;
   }
-  .sheet-inner{ padding: 18mm 18mm 22mm 18mm; }
+
+
+  .sheet-inner{ padding: 8mm 18mm 18mm 18mm;
+   }
   .page-break { page-break-before: always; }
+
+  /* Print Settings */
   @media print{
     body {
     background: #fff !important;
     margin: 0;
   }
     .no-print{ display:none !important; }
-    .sheet { box-shadow:none; 
+    .sheet{ 
+      box-shadow:none; 
+      margin: 0 auto;
+      
       margin-top: 0 !important; 
-    padding-top: 0 !important; }
+    padding-top: 0 !important;
+      
+    }
   }
+
+  /* Force A4 size */
+  @page {
+    size: A4;
+   margin: 0 !important;
+   
+  }
+
   .paper-h1{ font-weight:700; letter-spacing:.3px; }
   .dots { flex:1; border-bottom:1px dotted #000; margin:0 6px; height:1.2em; }
   .sec-title{ font-weight:700; }
@@ -104,9 +139,6 @@
       <div id="paper" class="sheet">
         <div class="sheet-inner" id="paperInner"></div>
       </div>
-      <!-- <button id="download" class="mt-4 px-4 py-2 rounded-xl bg-gradient-to-r from-green-400 to-emerald-500 font-bold text-black shadow-lg hidden">
-        Download PDF
-      </button> -->
     </section>
   </main>
 
@@ -216,11 +248,13 @@ function renderSections(sections){
   });
   return html;
 }
-
 function generate(){
   const secs = parseSections();
   const header = renderHeader();
   paperInner.innerHTML = header + renderSections(secs);
+
+  insertPageBreaks(); // <-- ensure page breaks added
+
   document.getElementById("previewWrap").classList.remove("hidden");
   localStorage.setItem('qp_state', JSON.stringify({
     sch:$("#sch").value, exam:$("#exam").value, subject:$("#subject").value,
@@ -228,13 +262,29 @@ function generate(){
     secs
   }));
 }
+
+function insertPageBreaks(){
+  const paperInner = document.getElementById("paperInner");
+  const maxHeight = 1050; // pixels ~ A4 height usable in preview
+  let currentHeight = 0;
+  [...paperInner.children].forEach((child, i) => {
+    currentHeight += child.offsetHeight;
+    if(currentHeight > maxHeight){
+      const br = document.createElement("div");
+      br.className = "page-break";
+      paperInner.insertBefore(br, child);
+      currentHeight = child.offsetHeight; // reset after break
+    }
+  });
+}
+
 function downloadPDF(){
   generate(); // ensure content is updated
   const el = document.getElementById('paper');
   const opt = {
-    margin:[10,10,15,10],
+    margin:[0,0,0,0],
     filename:'question-paper.pdf',
-    image:{ type:'jpeg', quality:0.98 },
+    image:{ type:'jpeg', quality:1 },
     html2canvas:{ scale:2, useCORS:true, windowWidth: el.scrollWidth },
     jsPDF:{ unit:'mm', format:'a4', orientation:'portrait' },
     pagebreak:{ mode:['css','legacy'] }
@@ -252,6 +302,3 @@ window.addEventListener('DOMContentLoaded', ()=>{ addSection(); refreshIndices()
 </script>
 </body>
 </html>
-
-
-
