--- a/question-paper.html
+++ b/question-paper.html
@@ -179,7 +179,7 @@ function refreshIndices(){
 }
 function addSection(prefill){
   const div = document.createElement('div');
-  div.innerHTML = sectionTemplate(secWrap.children.length+1);
+  div.innerHTML = sectionTemplate(secWrap.children.length);
   const el = div.firstElementChild;
   secWrap.appendChild(el);
   el.querySelector(".del").onclick = () => { el.remove(); refreshIndices(); };
@@ -302,4 +302,5 @@ window.addEventListener('DOMContentLoaded', ()=>{ addSection(); refreshIndices()
 </script>
 </body>
 </html>
+
 
