--- a/question-paper.html
+++ b/question-paper.html
@@ -13,6 +13,11 @@
 .q-item, .sec-title, .sheet-inner {
   page-break-inside: avoid;
 }
+.q-item {
+  margin:8px 0;
+  line-height:1.45;
+  white-space: pre-wrap;  /* 👈 ye preserve karega newlines aur spaces */
+}
 
 .page-break {
   page-break-before: always;
