--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </li>
       </ol>
       <div style="margin-top:14px">
-        <a href="random-picker.html" class="btn btn--primary btn--pill"><i class="ri-flashlight-line"></i> Start Generating</a>
+        <a href="ukg.html" class="btn btn--primary btn--pill"><i class="ri-flashlight-line"></i> Start Generating</a>
       </div>
     </div>
   </section>
@@ -324,6 +324,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
