--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <p>Upload chapter-wise questions (image), choose how many you need, and download a neat printable paper. Randomized. Unique. Consistent formatting.</p>
 
         <div class="hero__cta">
-          <a href="admin_login.html" class="btn btn--primary btn--pill"><i class="ri-flashlight-line"></i> Generate Question</a>
+          <a href="admin_dashboard.html" class="btn btn--primary btn--pill"><i class="ri-flashlight-line"></i> Generate Paper</a>
           <a href="about.html" class="btn btn--ghost btn--pill"><i class="ri-folder-upload-line"></i>About</a>
         </div>
 
@@ -324,6 +324,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
