--- a/admin_login.html
+++ b/admin_login.html
@@ -130,7 +130,7 @@
       // Hardcoded credentials
       if(user === "spsk" && pass === "2025") {
         localStorage.setItem("isLoggedIn", "true");
-        window.location.href = "question-paper.html";
+        window.location.href = "admin_dashboard.html";
       } else {
         document.getElementById("error-msg").innerText = "❌ Invalid Username or Password!";
       }
@@ -138,3 +138,4 @@
   </script>
 </body>
 </html>
+
