--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -11,7 +11,7 @@
     <h1 class="text-3xl font-extrabold text-center mb-8 text-gray-800">⚙️ Admin Dashboard</h1>
 
     <div class="flex flex-col gap-5">
-      <a href="lkg.html" class="w-full text-center bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
+      <a href="ukg.html" class="w-full text-center bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
         📘 Generate L.K.G,U.K.G to 2 Class
       </a>
 
@@ -26,3 +26,4 @@
   </div>
 </body>
 </html>
+
